remove margin-top from img element and ensure div has consistent spacing

--- a/module-4/2-link-to-css-file/style.css
+++ b/module-4/2-link-to-css-file/style.css
@@ -1,9 +1,11 @@
+div {
+  margin-top: 100px;
+}
 img,
 input {
   display: block;
 }
 img {
-  margin-top: 100px;
   width: 300px;
 }
 input {
